--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,11 @@
     "require": {
         "laravel/lumen-framework": "5.0.*",
         "vlucas/phpdotenv": "~1.0",
-        "abraham/twitteroauth": "^0.5.3"
+        "abraham/twitteroauth": "^0.5.3",
+        "phpunit/phpunit": "~4.7"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "~4.7"
     },
     "autoload": {
         "psr-4": {
