--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
     "require-dev": {
         "phpunit/phpunit": "~4.7"
     },
+    "files": [
+        "app/constants.php"
+    ],
     "autoload": {
         "psr-4": {
             "App\\": "app/"
